fixed: bumped max-width for page width to align with bootstrap containers on large displays.

--- a/upstream/public/css/canvas.css
+++ b/upstream/public/css/canvas.css
@@ -754,7 +754,7 @@ blockquote p {
 
 .page-content {
   min-height: 100%;
-  max-width: 1000px;
+  max-width: 1170px;
 
   margin: 0 auto;
   padding-top: 64px; /* match bottom padding of page-container */
